--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "dashjs": "^5.0.0",
+    "install": "^0.13.0",
+    "npm": "^10.9.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
