--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
+    "cheerio": "^1.0.0",
     "dashjs": "^5.0.0",
     "install": "^0.13.0",
     "npm": "^10.9.2",
