--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.17.0",
     "redux": "^5.0.1"
   }
 }
