--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,18 @@ functions = "netlify/functions"           # Tell Netlify where the backend funct
 publish = "build"                         # Tell Netlify to deploy the built frontend from this folder
 
 [[redirects]]
-from = "/api/subreddits"                  # Requests to this URL (and other one below)...
-to = "/.netlify/functions/getSubReddits"  # ...will route to the backend function file
+from = "/api/subreddits"                  # Requests to this URL (and other ones below)...
+to = "/.netlify/functions/getSubReddits"  # ...will route to the 'backend' function file
 status = 200                              # Treated as a successful proxy (not a redirect)
 
 [[redirects]]
 from = "/api/subreddit"
 to = "/.netlify/functions/getSubReddit"
 status = 200
+
+
+[[redirects]]
+  from = "/api/comments"
+  to = "/.netlify/functions/getPostComments"
+  status = 200
+
