Added redditAuthHelper.js to 'netlify\functions' folder AND updated getSubReddits.js file.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,9 @@
 ## folder since it's too big for 
 ## uploading to github
 node_modules
+
 # Local Netlify folder
-.netlify
+.netlify 
+
+# .env file
+.env
