Replaced the hosting uri in 'User-Agent' of serverless function with .env variable HOSTING_URI for consistency.

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,13 @@
 # After creating Reddit application, you'll get
 # REDDIT_CLIENT_ID and REDDIT_CLIENT_SECRET values.
 #
+# Also, the HOSTING_URI is the uri of the location where app is currently
+# hosted (Example: localhost:8888 OR your-app-subdomain.netlify.app);
+# but don't add 'http://' or 'https://' here since it adds protocol clutter.
+#
 # Finally, replace all the placeholder values below.
 
 REDDIT_CLIENT_ID=your-reddit-client-id
 REDDIT_CLIENT_SECRET=your-reddit-client-secret
 REDDIT_USERNAME=your-reddit-account-username
+HOSTING_URI=your-app-hosting-uri
